--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -9,6 +9,12 @@ FROM golang:1.23
 COPY --from=builder /app/cmd/api-gateway /api-gateway
 COPY wait-for-it.sh /app/wait-for-it.sh
 RUN chmod +x /app/wait-for-it.sh
-COPY template/fc.html /app
+
+
+COPY template/getUser.html /app 
+COPY template/loginUser.html /app 
+COPY template/registrationUser.html /app 
+COPY template/loginAdmin.html /app 
+COPY template/workAdmin.html /app 
 
 CMD ["/app/wait-for-it.sh", "kafka:9092", "--", "/api-gateway"]
